# nbtv_arduino_player

./: .gitignore  PORTABLE-NBTV-PLAN.md
.github/workflows/: firmware.yml  server-image.yml
firmware/nbtv_player/: audio_out.cpp  audio_out.h  button.cpp  button.h  frame_buffer.cpp  frame_buffer.h  nbtv_config.h  nbtv_player.ino  nbtv_render.cpp  nbtv_render.h  net.cpp  net.h  sample_buffer.cpp  sample_buffer.h  secrets.example.h  settings.cpp  settings.h
server/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
server/app/: __init__.py  bot.py  config.py  control.py  encoder.py  nbtv.py  render.py  server.py  stream.py
